org-version-lwc/force-app/main/default/objects/OrgVersionCache__c/OrgVersionCache__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Stores the latest fetched version of the organization&apos;s environment (Label and Version Number)</description>
    <label>Org Version Cache</label>
</CustomObject>