org-version-lwc/force-app/main/default/objects/OrgVersionCache__c/fields/Last_Fetched__c.field-meta.xml
<CustomField>
    <fullName>Last_Fetched__c</fullName>
    <description>Indicates when the version number was last fetched. The OrgVersionController uses this value to determine if an API callout should be made, or if the cached version can be used</description>
    <label>Last Fetched</label>
    <type>Date</type>
</CustomField>