org-version-lwc/force-app/main/default/objects/OrgVersionCache__c/fields/Version_Label__c.field-meta.xml
<CustomField>
    <fullName>Version_Label__c</fullName>
    <description>The human-readable label of the version (eg. Spring &apos;26)</description>
    <label>Version Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>