org-version-lwc/force-app/main/default/objects/OrgVersionCache__c/fields/Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Version_Number__c</fullName>
    <description>The numerical version of the org&apos;s release. Eg. 56.0</description>
    <label>Version Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>